--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ex.alvaro.pronunciatel" >
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -18,6 +20,7 @@
         </activity>
 
         <service android:name=".leerTTS" />
+        <service android:name=".reconocerVoz"/>
     </application>
 
 </manifest>
