--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
 
         <activity android:name=".actMenuActividades" > </activity>
+        <activity android:name=".actImagenes" > </activity>
 
         <service android:name=".leerTTS" />
         <service android:name=".reconocerVoz"/>
