Dialogo continuar actividad imagen - puntuacion basica - inicio otras actividades -correccion imagenes tildes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
 
         <activity android:name=".actMenuActividades" > </activity>
         <activity android:name=".actImagenes" > </activity>
+        <activity android:name=".actPreguntas"></activity>
+        <activity android:name=".actLetras"></activity>
+        <activity android:name=".actPintar"></activity>
 
         <service android:name=".leerTTS" />
         <service android:name=".reconocerVoz"/>
