--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
 
         <activity android:name=".actCuentos"></activity>
         <activity android:name=".actOpuestos"></activity>
+        <activity android:name=".actPreguntasCuentos"></activity>
 
         <service android:name=".leerTTS" />
         <service android:name=".reconocerVoz"/>
